final submmition-project

--- a/Signinpage.html
+++ b/Signinpage.html
@@ -147,7 +147,7 @@
             <input type="submit">
 
         </form>
-        <a href="loginpage.html">Sign in</a>
+        <a href="loginpage.html">Login here</a>
         <p>Selecting this checkbox will keep you signed into your account on this device until you sign out. Do not
             select this on shared devices.
         </p>
@@ -181,12 +181,12 @@
         event.preventDefault();
 
         let email = document.querySelector("#email").value;
-        // let number = document.querySelector("#number").value;
+        //let number = document.querySelector("#number").value;
         let password = document.querySelector("#pas").value;
 
         let obj = {
             email,
-            number,
+         
             password
         }
 
